# tizen_proprietary_samsung_serranove

audit/: audit.manifest
audit/init.d/: auditd.conf
audit/packaging/: audit.spec
bluez/: bluez.manifest  obexd.manifest
bluez/gdbus/: gdbus.h  object.c
bluez/obexd/client/: pbap.c
bluez/obexd/plugins/: pbap.c
bluez/packaging/: bluez.spec
bluez/profiles/audio/: avctp.c  avdtp.c  avrcp.c  media.c
bluez/src/: adapter.c  adapter_le_vsc_features.c  attrib-server.c  device.c  device.h  gatt-client.c  gatt-database.c  profile.c
bluez/src/shared/: att.c  gatt-client.c  gatt-client.h  gatt-db.c
bluez/tools/: hciattach.c  pskey_get.c
bzip2/packaging/: bzip2.spec
connman/: connman.manifest
connman/gdhcp/: client.c
connman/gsupplicant/: gsupplicant.h  supplicant.c
connman/gweb/: gweb.c
connman/include/: network.h  service.h
connman/packaging/: connman.spec
connman/plugins/: bluetooth.c  wifi.c
connman/src/: agent.c  config.c  connection.c  connman.h  dhcp.c  dnsproxy.c  main.c  network.c  ntp.c  service.c  wispr.c
connman/tizen/: rtctimer.c
dbus/bus/: dbus.socket.in  driver.c
dbus/packaging/: dbus.manifest  dbus.spec
default-fonts-sdk/packaging/: default-fonts-sdk.spec
elementary/: configure.ac
elementary/packaging/: elementary.spec
elementary/po/: or.po
elementary/src/lib/: Makefile.am  elc_ctxpopup.c  elc_hoversel.c  elc_multibuttonentry.c  elc_naviframe.c  elc_popup.c  elm_atspi_bridge.c  elm_bg.c  elm_box.c  elm_button.c  elm_calendar.c  elm_config.c  elm_conform.c  elm_datetime.c  elm_entry.c  elm_flipselector.c  elm_gengrid.c  elm_gengrid.eo  elm_genlist.c  elm_hover.c  (+28 more)
elm-misc/: Makefile
elm-misc/packaging/: elm-misc.spec
elm-modules/edje_feedback/: configure.ac  feedback.c
elm-modules/packaging/: elm-modules.spec
gcc/packaging/: precheckin.sh
glib2.0/packaging/: glib2.spec
gst-omx/: config.h.in  configure  configure.ac
gst-omx/config/: Makefile.am  Makefile.in
gst-omx/omx/: Makefile.am  gstomx.c  gstomx.h  gstomxaacenc.c  gstomxaudioenc.h  gstomxh263dec.c  gstomxh263enc.c  gstomxh264dec.c  gstomxh264dec.h  gstomxh264enc.c  gstomxh264enc.h  gstomxmjpegdec.c  gstomxmpeg2videodec.c  gstomxmpeg4videodec.c  gstomxmpeg4videoenc.c  gstomxtheoradec.c  gstomxvideodec.c  gstomxvideodec.h  gstomxvideoenc.c  gstomxvideoenc.h  gstomxvp8dec.c  gstomxwmvdec.c
gst-omx/packaging/: gst-omx.spec
gst-plugins-bad/: configure.ac
gst-plugins-bad/ext/: Makefile.am
gst-plugins-bad/packaging/: gst-plugins-bad.spec
gst-plugins-base/packaging/: gst-plugins-base.spec
gst-plugins-camera-msm8x16/: LICENSE.BSD  configure.ac
gst-plugins-camera-msm8x16/camerasrc/src/: Makefile.am  gstcamerasrccolorbalance.c  gstcamerasrccontrol.c  gstqcamerasrc.c
gst-plugins-camera-msm8x16/camerasrc/src/HAL/ss/: qcamera_main.c  qcamera_preview.c  qcamera_record.c  qcamera_snapshot.c
gst-plugins-camera-msm8x16/camerasrc/src/include/: gstcamerasrccolorbalance.h  gstcamerasrccontrol.h  gstqcamerasrc.h  gstqcamerasrc_defs.h  gstqcamerasrc_errors.h  gstqcamerasrc_types.h
gst-plugins-camera-msm8x16/camerasrc/src/include/HAL/ss/: QCameraHALCInterface.h  qcamera_main.h  qcamera_preview.h  qcamera_record.h  qcamera_snapshot.h
gst-plugins-camera-msm8x16/camerasrc/src/include/HDR/: camerahdr.h
gst-plugins-camera-msm8x16/camerasrc/src/include/hardware/: camera.h  camera_common.h  hardware.h
gst-plugins-camera-msm8x16/camerasrc/src/include/system/: camera.h
gst-plugins-camera-msm8x16/camerasrc/src/libs/: libcamerahdr.so.0.0.0
gst-plugins-camera-msm8x16/common/: Makefile.in
gst-plugins-camera-msm8x16/packaging/: gst-plugins-camera-msm8916.spec
gst-plugins-extension/: LICENSE.BSD3c  configure.ac
gst-plugins-extension/Others/: Makefile.am
gst-plugins-extension/packaging/: gst-plugins-extension1.0.spec
gst-plugins-good/: configure.ac
gst-plugins-good/packaging/: gst-plugins-good.spec
gst-plugins-tizen/evaspixmapsink/: evaspixmapsink.c
gst-plugins-tizen/packaging/: gst-plugins-tizen.spec
gst-plugins-ugly/packaging/: gst-plugins-ugly.spec
gst-rtsp-server/packaging/: gst-rtsp-server.spec
gstreamer/: gstreamer.manifest
gstreamer/gst/: gstelement.c  gstinfo.c
gstreamer/packaging/: gstreamer.spec
iniparser/src/: iniparser.c
iniparser/test/: iniexample_thread.c
iproute2/packaging/: iproute2.spec
isf/: configure.ac
isf/packaging/: isf.spec
libav/packaging/: libav.spec
libevdev/tools/: Makefile.am
libgcrypt11/packaging/: libgcrypt.spec
libgpg-error/packaging/: libgpg-error.spec
libsndfile/packaging/: libsndfile.spec
libsoup2.4/debian/: changelog
libsoup2.4/libsoup/: TIZEN.h  soup-cache.c  soup-message.c  soup-socket.c
libsoup2.4/packaging/: libsoup.spec
libxslt/packaging/: libxslt.spec
libzbar/packaging/: zbar.spec
lvm2/packaging/: lvm2.spec
mmfw-sysconf/packaging/: mmfw-sysconf.spec
net-tools/packaging/: net-tools.spec
openal-soft/Alc/: pulseaudio.c
openal-soft/packaging/: openal-soft.spec
openal-soft/test/: CMakeLists.txt  open_al_test.c
pam/packaging/: pam.spec
pulseaudio/: configure.ac  pulseaudio.manifest
pulseaudio/packaging/: pulseaudio.spec
pulseaudio/src/: Makefile.am  map-file
python/packaging/: python-base.spec  python.spec
rfkill/packaging/: rfkill.spec
shared-mime-info/: freedesktop.org.xml.in
shared-mime-info/packaging/: shared-mime-info.spec
systemd/packaging/: systemd.spec
tizen-locale/config/: default_locale.conf
webkit-efl/LayoutTests/: ChangeLog
webkit-efl/Source/: cmakeconfig.h.cmake
webkit-efl/doc/: webkit-efl_doc.h
webkit-efl/packaging/: webkit2-efl.spec
wpasupplicant/packaging/: wpasupplicant.spec
(+450 files in other folders)
